Bug 1129388 - Define MSRangeRemovalAction in MediaSource.h where it is exposed. r=jya, a=sledru